<resources>
    <string name="app_name">elCare</string>
    <string name="facebook_application_id">610274216494799</string>
    <string name="facebook_login_protocol_scheme">fb610274216494799</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_health_detail">HealthDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact_phone_number">Contact Phone Number</string>
    <string name="email">Email</string>
    <string name="show_status">Show Status</string>
    <string name="monitor_now">Monitor Now</string>
    <string name="contact_person_detail">Contact Person Detail</string>
    <string name="heart_beat_rate">Heart Beat Rate</string>
    <string name="bp_rate">BP Rate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">elCare</string>
    <string name="nav_header_subtitle">elCare@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="elCare_desc">elCare is an Assistance for Elderly People,its an application for the remote monitoring of elderly people in their own homes or inside proper care homes or hospitals.It shows the status and statics of the elderly people</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="signup">signup</string>
    <string name="no_account_yet">No Account yet?</string>
    <string name="create_one">Create one</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me?</string>
    <string name="logo">logo</string>
    <string name="glucose_level">Glucose Level</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="upload">Upload</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="add_health_data">Add Health Data</string>
    <string name="contact_person_details">Contact Person Details</string>
    <string name="submit_details">Submit details</string>
    <string name="gallery">gallery</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_address">Contact Address</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="chosen_pic">Chosen Pic</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">Login</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="add_user">Add User</string>
    <string name="person">person</string>
    <string name="tips">Tips</string>
    <string name="bulb">bulb</string>
</resources>
